src/objects/ScenarioResult__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayID__c</fullName>
        <label>DisplayID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayType__c</fullName>
        <label>DisplayType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributionJobID__c</fullName>
        <label>DistributionJobID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InPlace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InPlace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstallerDeliverStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installer Deliver Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstallerScale__c</fullName>
        <label>Installer Scale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 inch</fullName>
                </value>
                <value>
                    <fullName>2 inchs</fullName>
                </value>
                <value>
                    <fullName>3 inchs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemID__c</fullName>
        <label>ItemID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemName__c</fullName>
        <label>ItemName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemPadBrochureID__c</fullName>
        <label>Item Pad Brochure ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemPadBrochureName__c</fullName>
        <label>Item Pad Brochure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemPersonalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Item Personalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemPictureID__c</fullName>
        <label>Item Picture ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemQuantityExtra__c</fullName>
        <label>Item Quantity Extra</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemQuantityRequested__c</fullName>
        <label>Item Quantity Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemRecipient__c</fullName>
        <label>Item Recipient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per physician in clinic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemType__c</fullName>
        <label>ItemType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentAccountID__c</fullName>
        <label>ParentAccountID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAccoutName__c</fullName>
        <label>ParentAccoutName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RackPosition__c</fullName>
        <label>Rack Position</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomID__c</fullName>
        <label>RoomID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomName__c</fullName>
        <label>Room Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <label>Scenario</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Scenario Results</relationshipLabel>
        <relationshipName>ScenarioResults</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SubItemBoardID__c</fullName>
        <label>SubItem Board ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubItemBoardName__c</fullName>
        <label>SubItem Board Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Scenario Result</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scenario Results</pluralLabel>
    <recordTypes>
        <fullName>Display</fullName>
        <active>true</active>
        <label>Display</label>
    </recordTypes>
    <recordTypes>
        <fullName>NDM</fullName>
        <active>true</active>
        <label>NDM</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>